--- a/dev-org/dev-org/Main.storyboard
+++ b/dev-org/dev-org/Main.storyboard
@@ -57,7 +57,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="GB8-Rn-hEE">
-                        <barButtonItem key="leftBarButtonItem" title="Delete" id="aD9-Ia-lar">
+                        <barButtonItem key="leftBarButtonItem" title="Log Out" id="aD9-Ia-lar">
                             <connections>
                                 <action selector="delete:" destination="79x-iv-g5o" id="7oB-bQ-02z"/>
                             </connections>
